feat: read output dir from loadNuxt

--- a/src/templates/sst.config
+++ b/src/templates/sst.config
@@ -2,7 +2,7 @@
 
 import { writeFileSync, mkdirSync, existsSync } from "node:fs";
 import * as path from "node:path";
-import { loadNuxtConfig } from "nuxt/kit";
+import { loadNuxtConfig, loadNuxt } from "nuxt/kit";
 
 function generateUUID() {
   return "xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx".replace(/[xy]/g, function (c) {
@@ -16,13 +16,15 @@ async function nuxflare() {
   const nuxtHubSecret = new sst.Secret("NuxtHub", generateUUID());
   const environment = new sst.Secret("Env", "{}");
   const nuxtConfig = await loadNuxtConfig({});
+  const nuxt = await loadNuxt({}) as any;
+  const outputDir = nuxt?._nitro?.options?.output?.dir || "./.output";
   const hubConfig = nuxtConfig.hub || {};
   const wrangler: Record<string, any> = {
     name: `${$app.name}-${$app.stage}`,
-    main: "./.output/server/index.mjs",
+    main: path.resolve(outputDir, 'server', 'index.mjs'),
     compatibility_date: "2024-12-05",
     assets: {
-      directory: "./.output/public/",
+      directory: path.resolve(outputDir, 'public'),
       binding: "ASSETS",
     },
     compatibility_flags: ["nodejs_compat"],
