fix: issues with output dir

--- a/src/templates/sst.config
+++ b/src/templates/sst.config
@@ -16,15 +16,16 @@ async function nuxflare() {
   const nuxtHubSecret = new sst.Secret("NuxtHub", generateUUID());
   const environment = new sst.Secret("Env", "{}");
   const nuxtConfig = await loadNuxtConfig({});
-  const nuxt = await loadNuxt({}) as any;
+  const nuxt = (await loadNuxt({})) as any;
   const outputDir = nuxt?._nitro?.options?.output?.dir || "./.output";
+  const migrationsDir = path.resolve(outputDir, "database", "migrations");
   const hubConfig = nuxtConfig.hub || {};
   const wrangler: Record<string, any> = {
     name: `${$app.name}-${$app.stage}`,
-    main: path.resolve(outputDir, 'server', 'index.mjs'),
+    main: path.resolve(outputDir, "server", "index.mjs"),
     compatibility_date: "2024-12-05",
     assets: {
-      directory: path.resolve(outputDir, 'public'),
+      directory: path.resolve(outputDir, "public"),
       binding: "ASSETS",
     },
     compatibility_flags: ["nodejs_compat"],
@@ -54,7 +55,7 @@ async function nuxflare() {
       binding: "DB",
       database_name: d1.nodes.database.name,
       database_id: d1.id,
-      migrations_dir: ".output/database/migrations",
+      migrations_dir: migrationsDir,
     });
     database.name = d1.nodes.database.name;
   }
@@ -147,10 +148,10 @@ async function nuxflare() {
     new command.local.Command(
       `WorkerDeploy${$app.stage}`,
       {
-        delete: `__NPX__ wrangler delete`,
+        delete: `__NPX__ wrangler delete --name ${wrangler.name}`,
       },
       {
-        dependsOn: [deploy],
+        dependsOn: [deploy, ...resources],
       },
     );
     if (database.name) {
@@ -159,7 +160,7 @@ async function nuxflare() {
           `Migrations${$app.stage}`,
           {
             dir: path.resolve("."),
-            create: `__NPX__ wrangler d1 migrations apply ${name} --remote`,
+            create: `[ -d "${migrationsDir}" ] && __NPX__ wrangler d1 migrations apply ${name} --remote || echo "Migrations directory not found, skipping."`,
             triggers: [new Date().toString()],
           },
           {
