--- a/.github/workflows/nuxflare-deploy.yml
+++ b/.github/workflows/nuxflare-deploy.yml
@@ -75,4 +75,5 @@ jobs:
           fi
 
           echo "Running: ${DEPLOY_CMD}"
+          SST_STAGE=$STAGE pnpm exec sst install
           SST_STAGE=$STAGE pnpm exec sst deploy
