--- a/.github/workflows/nuxflare-deploy.yml
+++ b/.github/workflows/nuxflare-deploy.yml
@@ -48,9 +48,6 @@ jobs:
       - name: Install deps
         run: pnpm install --frozen-lockfile
 
-      - name: Install SST
-        run: "curl -fsSL https://ion.sst.dev/install | bash"
-
       - name: Deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -72,5 +69,4 @@ jobs:
           fi
 
           echo "Running: ${DEPLOY_CMD}"
-          SST_STAGE=$STAGE sst install
-          SST_STAGE=$STAGE sst deploy
+          npx ${DEPLOY_CMD}
