--- a/.github/workflows/nuxflare-deploy.yml
+++ b/.github/workflows/nuxflare-deploy.yml
@@ -69,4 +69,4 @@ jobs:
           fi
 
           echo "Running: ${DEPLOY_CMD}"
-          npx ${DEPLOY_CMD}
+          ../dist/index.js ${DEPLOY_CMD}
