--- a/.github/workflows/nuxflare-deploy.yml
+++ b/.github/workflows/nuxflare-deploy.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Build Nuxflare
         working-directory: .
         run: |
+          pnpm i
           pnpm run build
 
       - name: Install deps
@@ -66,6 +67,7 @@ jobs:
               STAGE="${{ github.event.inputs.stage }}"
             else
               # Sanitize branch name: lower-case and replace non-alphanumeric chars with dashes
+              echo "${GITHUB_REF_NAME} and ${GITHUB_REF} and ${GITHUB_EVENT_NAME}"
               STAGE=$(echo "${GITHUB_REF_NAME}" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9]/-/g')
             fi
             echo "Deploying to stage: ${STAGE}"
@@ -73,4 +75,4 @@ jobs:
           fi
 
           echo "Running: ${DEPLOY_CMD}"
-          node ../dist/index.js ${DEPLOY_CMD}
+          ../dist/index.js ${DEPLOY_CMD}
