--- a/package.json
+++ b/package.json
@@ -18,19 +18,17 @@
     "chalk": "^5.4.1",
     "commander": "^13.1.0",
     "dotenv": "^16.4.7",
-    "fs-extra": "^11.2.0",
     "liquidjs": "^10.21.0",
+    "open": "^10.1.0",
     "terminal-link": "^3.0.0",
     "update-notifier": "^7.3.1"
   },
   "type": "module",
   "devDependencies": {
     "@cloudflare/workers-types": "4.20250224.0",
-    "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^8.2.10",
     "@types/node": "^20.10.5",
     "@types/update-notifier": "^6.0.8",
-    "esbuild": "^0.25.0",
     "release-it": "^18.1.2",
     "typescript": "^5.3.3"
   },
